Add all MessagePassed event fields
