# internal/api/dbstore/withdrawalhistory.go
@@ -34,10 +34,12 @@ func (s *PostgresStore) WithdrawalHistory(ctx context.Context, addr common.Addre
 		SELECT
 			w.withdrawal_hash,
 			w.chain_id,
+			w.withdrawal_nonce,
 			w.withdrawal_sender,
 			w.withdrawal_target,
-			w.withdrawal_data,
 			w.withdrawal_value,
+			w.withdrawal_gas_limit,
+			w.withdrawal_data,
 			w.tx_hash,
 			w.block_number,
 			w.block_timestamp,
@@ -113,10 +115,12 @@ func (s *PostgresStore) WithdrawalHistory(ctx context.Context, addr common.Addre
 		err = rows.Scan(
 			&row.WithdrawalHash,
 			&row.ChainID,
+			&row.Nonce,
 			&row.Sender,
 			&row.Target,
-			&row.Data,
 			&row.Value,
+			&row.GasLimit,
+			&row.Data,
 			&row.TxHash,
 			&row.BlockNumber,
 			&row.BlockTimestamp,
