# internal/api/docs/swagger.yaml
@@ -80,7 +80,11 @@ definitions:
                   type: string
                 withdrawal_data:
                   type: string
+                withdrawal_gas_limit:
+                  type: string
                 withdrawal_hash:
+                  type: string
+                withdrawal_nonce:
                   type: string
                 withdrawal_sender:
                   type: string
